fixed captions and titles alignment. change color.

--- a/css/index.css
+++ b/css/index.css
@@ -124,17 +124,22 @@ li{
 }
 #content .ballot_title{
 	text-align: left;
-	font-size: 1.75em;
+	max-width: 540px;
+	font-size: 1.35em;
 	margin-bottom: 0.4em;
 	position: relative;
 	left:0px;
+	padding: 0px 20px;
+	padding-top: 20px;
 }
 #content p.ballot_caption{
 	margin-top: 0;
     font-size: 0.8em;
-    text-align: center;
-    width: 260px;
+    text-align: left;
+	max-width: 500px;
     line-height: 1.2em;
+	padding: 0px 20px;
+	padding-bottom: 20px;
 }
 #content p.caption-test{
 	font-weight: bold;
