--- a/play/css/election.css
+++ b/play/css/election.css
@@ -7,7 +7,7 @@ Election/Sandbox design:
 ************/
 
 .div-election{
-    background-color: #f9feff;
+    background-color: #ffffffd4;
     border: 1px solid #ccc;
 	padding: 10px;
     /* margin: -10px; */
